# sac2c

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTORS.md  LICENSE  LICENSE.md  LICENSE.txt  Makefile  Makefile.Config  Makefile.Config.in  Makefile.Deps  Makefile.Sac2c  Makefile.Source  Makefile.Targets  RCS-directories  RCS-files  README.md  THIRDPARTY.md  a.out.cu  aclocal.m4  configure  configure.ac  help-output  mydebug  sac2c.code-workspace  sac2cdoxy
cmake/cpack/: CMakeLists.txt  README.txt  WELCOME.txt  config.cmake  options.cmake
cmake/runtime/: CMakeLists.txt  config.cmake  sac2c-variables.cmake  sac2crc.local.in
libruntime-project-cmake/: CMakeLists.txt  sac2c.cmake
setup/: .gitignore  configure  configure.ac  sac2crc.ALPHA  sac2crc.MAC  sac2crc.MAC.in  sac2crc.SUN  sac2crc.SUN.in  sac2crc.X86  sac2crc.backend.cuda.in  sac2crc.backend.mutc.in  sac2crc.in  sac2crc.local.in  sac2crc.modifiers.cc  sac2crc.modifiers.malloc  sac2crc.modifiers.rcm.in  sac2crc.pre.in
setup/config/: check_brackets.m4  check_cc_option.m4  check_code_beautifier.m4  check_compiler_vendor.m4  check_const_stderr.m4  check_cpp_flag.m4  check_cuda.m4  check_distmem.m4  check_dll_ext.m4  check_graphviz.m4  check_hr_clock.m4  check_isl.m4  check_lex_yacc.m4  check_lpel.m4  check_lto.m4  check_mt.m4  check_omp.m4  check_phm.m4  check_ptr_prefix.m4  check_required_tool.m4  check_simd_syntax.m4  check_sl.m4  check_stdlib.m4  ltmain.sh
src/: CMakeLists.txt
src/c-interface/: Makefile  RCS-files  import_specialization.c  import_specialization.h  map_cwrapper.c  map_cwrapper.h  print_interface.c  print_interface.h  print_interface_header.c  print_interface_header.h  print_interface_wrapper.c  print_interface_wrapper.h
src/compile/: BEtest.c  BEtest.inp  Makefile  Old2NewWith.c  Old2NewWith.h  PatchWith.c  PatchWith.h  RCS-files  ReuseWithArrays.c  ReuseWithArrays.h  RuntimeError.c  RuntimeError.h  adjustaccumulation.c  adjustaccumulation.h  analyse.c  analyse.h  blir.c  blir.h  compile.c  compile.h  compile.tagged.c  compile.tagged.h  functionprecompile.c  functionprecompile.h  gen_startup_code.c  gen_startup_code.h  icm.data  icm2c.c  icm2c.h  icm2c_basic.c  icm2c_basic.h  icm2c_error.c  icm2c_error.h  icm2c_mt.c  icm2c_mt.h  icm2c_prf.c  icm2c_prf.h  icm2c_sched.c  icm2c_sched.h  icm2c_std.c  (+38 more)
src/concurrent/: Makefile  RCS-files  concregions.c  concregions.h  concurrent.c  concurrent.h  concurrent_info.h  concurrent_lib.c  concurrent_lib.h  create_mtfuns.c  create_mtfuns.h  removespmd.c  removespmd.h  schedule.c  schedule.h  scheduling.c  scheduling.h  spmd_cons.c  spmd_cons.h  spmd_emm.c  spmd_emm.h  spmd_init.c  spmd_init.h  spmd_lift.c  spmd_lift.h  spmd_opt.c  spmd_opt.h  spmd_trav.c  spmd_trav.h  spmdregions.c  spmdregions.h  sync_init.c  sync_init.h  sync_opt.c  sync_opt.h
src/constants/: Makefile  RCS-files  basecv.c  basecv.h  constants.h  constants_ari_ops.c  constants_basic.c  constants_internal.h  constants_serialize.c  constants_struc_ops.c  cv2cv.c  cv2cv.h  cv2scalar.c  cv2scalar.h  cv2str.c  cv2str.h  shape.c  shape.h  zipcv.c  zipcv.h
src/flatten/: CheckAvis.c  CheckAvis.h  ExplicitAccumulate.c  ExplicitAccumulate.h  Makefile  RCS-files  SSATransform.c  SSATransform.h  ToNewTypes.c  ToNewTypes.h  ToOldTypes.c  ToOldTypes.h  UndoSSATransform.c  UndoSSATransform.h  WLEnhancement.c  WLEnhancement.h  WLPartitionGeneration.c  WLPartitionGeneration.h  adjust_ids.c  adjust_ids.h  cleanup_decls.c  cleanup_decls.h  codesimplification.c  codesimplification.h  flatten.c  flatten.h  fun2lac.c  fun2lac.h  handle_condexpr.c  handle_condexpr.h  handle_mops.c  handle_mops.h  infer_dfms.c  infer_dfms.h  insert_vardec.c  insert_vardec.h  lac2fun.c  lac2fun.h  lacinlining.c  ssa.c  (+7 more)
src/global/: Error.c  Error.h  Makefile  NameTuples.c  NameTuples.h  NameTuplesUtils.c  NameTuplesUtils.h  RCS-files  access_macros.h  argtag_info.mac  build.h  config.h.in  ctinfo.c  ctinfo.h  filemgr.c  filemgr.h  flags.mac  free.c  free.h  globals.c  globals.h  globals.mac  internal_lib.c  internal_lib.h  interrupt.c  interrupt.h  main.c  memory.c  memory.h  my_debug.c  my_debug.h  node_info.mac  node_info.mac.xsl  nt_info.mac  optimize.mac  options.c  options.h  phase.c  phase.h  phase_drivers.c  (+21 more)
src/heapmgr/: Makefile  RCS-files  cache_align.c  calloc.c  diagnostics.c  heapmgr.h  internal.c  large_chunks.c  malloc.c  memalign.c  nophm.c  realloc.c  setup.c  small_chunks.c  wrapper.c
src/include/: cachesim.h  config.h.in  fun-attrs.h.in  getoptions.h  md5.h  override_cuda_runtime.h  rtspec_modes.h  sactools.h  type_info.mac  uthash.h  xconfig.h.in  xsacdirs.h.in
src/libsac/: CMakeLists.txt  Makefile  RCS-files  boundcheck.c  cachesim.h  cachesim_access.c  cachesim_basic.c  cinterface.c  commandline.c  free_interface_handler.c  heapmgr.h  heapmgr_basic.c  heapmgr_diag.c  heapmgr_disabled.c  heapmgr_malloc.c  heapmgr_memalign.c  heapmgr_realloc.c  message.c  misc.c  mt.c  nophm.c  profile.c  sac2c.sac  sac_arg.c  trace.c
src/libsac2c/: CMakeLists.txt  Makefile
src/libsacdistmem/: .gitignore  CMakeLists.txt  Makefile
src/libsacdistmemphm/: .gitignore
src/libsacphm/: CMakeLists.txt
src/libsacphmc/: CMakeLists.txt  empty
src/libsacprelude/: CMakeLists.txt  rterror.sac  sacprelude.sac
src/m4/: icm.m4
src/makefiles/: build.mkf  build.mkf.in  check.mkf  clean.mkf  config.mkf.in  core.mkf  refactor.mkf  rtlibs.mkf  settings.mkf  source.mkf  subproject.mkf  targets.mkf
src/modules/: Makefile  RCS-files  addspecialfuns.c  analysis.c  analysis.h  annotatenamespace.c  annotatenamespace.h  cccall.c  cccall.h  ccmanager.c  ccmanager.h  checkdec.c  checkdec.h  compare_macros.h  dependencies.c  dependencies.h  export.c  export.h  filemgr.c  filemgr.h  gatherdependencies.c  gatherdependencies.h  implicittypes.c  implicittypes.h  import.c  import.h  importsymbols.c  libbuilder.c  libbuilder.h  libmanager.c  libmanager.h  libstat.c  libstat.h  modulemanager.c  modulemanager.h  namespaces.c  namespaces.h  prepareinline.c  prepareinline.h  readsib.c  (+13 more)
src/multithread/: Makefile  RCS-files  (+44 more)
(+2595 files in other folders)
